# vf-files

./: .gitignore  CMakeLists.txt  VfFilesConfig.cmake.in
.github/workflows/: buildAndTest.yml
automount/: CMakeLists.txt
automount/app/: CMakeLists.txt  main.cpp
automount/script/: zenux-automount.sh
automount/systemd/: CMakeLists.txt  zenux-automount.service
automount/udev-rule/: 98-zenux-automount.rules  CMakeLists.txt
file-access-control/: CMakeLists.txt  file-access-control-libConfig.cmake.in
file-access-control/src/: fileaccesscontrol.cpp  fileaccesscontrol.h
file-access-control/tests/: CMakeLists.txt
file-access-control/tests/gtest/: unittest-fileaccesscontrol.cpp
src/: defaultpathentry.cpp  defaultpathentry.h  dirwatcherentry.cpp  dirwatcherentry.h  fileaccesscontrol.cpp  fileaccesscontrol.h  mountwatcherentry.cpp  mountwatcherentry.h  serialdevicewatcher.cpp  serialdevicewatcher.h  vf_files.cpp  vf_files.h
tests/: CMakeLists.txt
tests/gtest/: unittest-fileaccesscontrol.cpp
vein-component/lib/: CMakeLists.txt  defaultpathentry.h  dirwatcherentry.h  fileaccesscontrol.cpp  fileaccesscontrol.h  mountwatcherentry.cpp  mountwatcherentry.h  mountwatcherentrybase.cpp  mountwatcherentrybase.h  mountwatcherthread.cpp  mountwatcherthread.h  mountwatcherworker.cpp  mountwatcherworker.h  serialdevicewatcher.cpp  vf_files.h
